# vta-collection

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.md  README.md  build.cmd  pyproject.toml  uic.cmd
assets/: CalibrationManagerDialog.ui  MainWindow.ui  NewMeasurementDialog.ui  calibration_editor_dialog.ui  calibration_manager_dialog.ui  main_window.ui
devtools/: splash_gen.py
vta_collection/: Adam4011.py  Adam4011Config.py  Adam4021.py  Adam4520.py  AdamBase.py  __main__.py  about_window.py  adam_4011.py  adam_4021.py  adam_4021_config.py  adam_4520.py  adam_base.py  base_instrument.py  calibration.py  calibration_editor_window.py  calibration_manager.py  calibration_manager_window.py  calibration_utils.py  cold_junction_compensator.py  config.py  config_editor.py  data_connector.py  file_manager.py  hardware.py  heater.py  main_window.py  math_utils.py  measurement.py  new_measurement_window.py  path_utils.py  serial_base.py  serializable.py  standard.py  temperature_chain.py  thermocouple.py
vta_collection/heater/: controller.py  heater.py  loop.py
